objects/DynamicLayoutElement__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>ButtonLabel__c</fullName>
        <label>Button Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ButtonName__c</fullName>
        <label>Button Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChildObjectLabel__c</fullName>
        <label>Child Object Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChildObject__c</fullName>
        <inlineHelpText>For Type equals Related List</inlineHelpText>
        <label>Child Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldSet__c</fullName>
        <label>Field Set</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LayoutNumber__c</fullName>
        <label>Layout Number</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedField__c</fullName>
        <inlineHelpText>The name of the lookup field on child object to Opportunity</inlineHelpText>
        <label>Related Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectionColumns__c</fullName>
        <inlineHelpText>1 or 2</inlineHelpText>
        <label>Section Columns</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SectionName__c</fullName>
        <label>Section Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Button, Section, Related List</inlineHelpText>
        <label>Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Dynamic Layout Element</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LayoutNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>